--- a/angular-bookstore/src/app/app.component.html
+++ b/angular-bookstore/src/app/app.component.html
@@ -1,9 +1,11 @@
 <div class="wrapper">
-   <!-- Navigation -->
+  <!-- Navigation -->
   <div class="content">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="http://www.extoltechnologies.com">Onine Bookstore</a>
+        <a class="navbar-brand" href="http://www.extoltechnologies.com"
+          >Onine Bookstore</a
+        >
         <button
           class="navbar-toggler"
           type="button"
@@ -16,16 +18,9 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
-        <div class="col-md-6">
-          <div class="row">
-            <div class="col-md-8">
-              <input type="text" class="form-control" placeholder="Search Books">
-            </div>
-            <div class="col-md-2">
-                <button type="submit" class="btn btn-primary">Search</button>
-              </div>
-          </div>
-        </div>
+          <!-- This is for search component-->
+          <app-search></app-search>
+
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
               <a class="nav-link" href="#"
@@ -53,7 +48,6 @@
       <router-outlet></router-outlet>
     </div>
   </div>
-
 
   <!-- /.container -->
 
