--- a/angular-bookstore/src/app/components/book-list/book-grid.component.html
+++ b/angular-bookstore/src/app/components/book-list/book-grid.component.html
@@ -1,43 +1,68 @@
 <div class="row">
-    <div class="col-lg-3">
-      <div class="list-group">
-        <a routerLink="/category/1" class="list-group-item"
-        routerLinkActive="bg-primary text-white font-weight-bold">Web Development</a>
-        <a routerLink="/category/2" class="list-group-item"
-        routerLinkActive="bg-primary text-white font-weight-bold">Programing</a>
-        <a routerLink="/category/3" class="list-group-item"
-        routerLinkActive="bg-primary text-white font-weight-bold">Database</a>
-        <a routerLink="/category/4" class="list-group-item"
-        routerLinkActive="bg-primary text-white font-weight-bold">Administration</a>
+  <div class="col-lg-3">
+    <app-book-category></app-book-category>
+  </div>
+  <!-- /.col-lg-3 -->
+  <div class="col-lg-9">
+    <div class="row">
+      <div class="col-lg-4 col-md-6 mb-4" *ngFor="let book of books">
+        <div class="card h-100">
+          <a routerLink="/books/{{ book.id }}"
+            ><img class="card-img-top imgresponsive" [src]="book.imageUrl"
+          /></a>
+          <div class="card-body">
+            <h4 class="card-title">
+              <a routerLink="/books/{{ book.id }}">{{ book.name }}</a>
+            </h4>
+            <h5>{{ book.unitPrice | currency: "INR" }}</h5>
+            <p class="card-text text-truncate">{{ book.description }}</p>
+          </div>
+          <div class="card-footer">
+            <button class="btn btn-primary float-right">Add to Cart</button>
+          </div>
+        </div>
+      </div>
+      <div
+        *ngIf="books?.length == 0"
+        class="col-lg-12 alert alert-warning mt-3"
+      >
+        No mathes found
       </div>
     </div>
-    <!-- /.col-lg-3 -->
+    <!-- /.row -->
 
-    <div class="col-lg-9">
-
+    <div class="row">
+      <!--Handle the page size-->
+      <div class="col-md-6">
         <div class="row">
-            <div class="col-lg-4 col-md-6 mb-4" *ngFor="let book of books">
-                <div class="card h-100">
-                  <a href="#"><img class="card-img-top imgresponsive" [src]="book.imageUrl"></a>
-                  <div class="card-body">
-                    <h4 class="card-title">
-                      <a href="#">{{ book.name }}</a>
-                    </h4>
-                    <h5>{{ book.unitPrice | currency: "INR" }}</h5>
-                    <p class="card-text text-truncate">{{ book.description }}</p>
-                  </div>
-                  <div class="card-footer">
-                    <button class="btn btn-primary float-right">Add to Cart</button>
-                  </div>
-                </div>
-              </div>
+          <div class="col-md-3">
+            <span class="mr-2">Page Size</span>
+          </div>
+          <div class="col-md-9">
+            <select (change)="updatePageSize($event.target.value)"
+                    class="form-control-sm"
+                    style="width: 20%;">
+                    <option selected>5</option>
+                    <option>10</option>
+                    <option>20</option>
+                    <option>50</option>
+            </select>
+
+          </div>
+
         </div>
+      </div>
 
-
-      <!-- /.row -->
+      <!-- Handle the pagination -->
+      <div class="col-md-6">
+        <ngb-pagination
+        [(page)]="currentPage"
+        [pageSize]="pageSize"
+        [collectionSize]="totalRecords"
+        (pageChange)="listBooks()"></ngb-pagination>
+      </div>
     </div>
-    <!-- /.col-lg-9 -->
   </div>
-  <!-- /.row -->
-
-
+  <!-- /.col-lg-9 -->
+</div>
+<!-- /.row -->
